# aa-switch

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
aa-switch-ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
aa-switch-ui/src/: App.tsx  index.css  main.ts
aa-switch-ui/src-tauri/: Cargo.toml  tauri.conf.json
aa-switch-ui/src-tauri/icons/: icon.icns
aa-switch-ui/src-tauri/src/: lib.rs  main.rs  tray.rs
aa-switch-ui/src/components/: AgentSelector.tsx  Header.tsx  PersonaSelector.tsx  StatusBar.tsx
docs/: aa-switch-guide.md
personas/: coder.md  entp_debater.md  intj_architect.md  isfj_guardian.md  istp_hacker.md  machiavelli_exec.md  otaku_helper.md  philosopher_coder.md  senior_oilcan.md  sre_night_watcher.md  startup_crazy_founder.md  venomous_critic.md
src/: index.ts
src/cli/: bin.js  index.ts
src/config/: loader.ts  manager.ts  schema.ts
src/proxy/: interceptor.ts  proxy.ts
tests/: e2e.test.ts  unit.test.ts
